feat: Add tile orientation support to the server and net protocols.
